...
            android:layout_height="match_parent"
            android:text="Nombre del album"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/EDNombreAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Introduce aquí el nombre del álbum"
            android:autofillHints="name"
            android:inputType="text" />

...
            android:layout_height="match_parent"
            android:text="Año de lanzamiento del álbum"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/EDYearAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Introduce aquí el año de lanzamiento del álbum"
            android:autofillHints="creditCardExpirationDate"
            android:inputType="number" />

...
            android:layout_height="match_parent"
            android:text="Genero"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spinnerGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />
...
            android:layout_height="match_parent"
            android:text="Descripción"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/EDDescrip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Introduce aquí la Descripción"
            android:autofillHints="name"
            android:inputType="text|textMultiLine" />

...
            android:layout_height="match_parent"
            android:text="Sello Discografico"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spinnerSello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/BtnCrearAlbum"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:text="Crear"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/lblRequestCrearAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:textSize="20sp"
            android:autofillHints="name"
            android:inputType="text"
...
