<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CrearColeccionistaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />


        <TextView
            android:id="@+id/lblNombreColeccionista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Nombre del coleccionista"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/EDNombreColeccionista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Introduce aquí el nombre del coleccionista"
            android:autofillHints="name"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="e-mail"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/EDEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Introduce aquí el e-mail del coleccionista"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/lblCellphoneColeccionista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Numero de celular del coleccionista"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/EDCellphoneColeccionista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Introduce aquí el numero de celular"
            android:autofillHints="phone"
            android:inputType="number" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/BtnCrearColeccionista"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:text="Crear"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/lblRequestCrearColeccinista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:autofillHints="name"
            android:inputType="number" />

    </LinearLayout>
</ScrollView>



