...
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:text="Album"/>

    <Button
        android:id="@+id/button_coleccionista_m"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:text="Coleccionista"/>

    </LinearLayout>
...
